Changes from Ant 1.2 to the current sources
===========================================

Changes that could break older environments:
--------------------------------------------

* Ant doesn't search for the buildfile anymore, unless you use the new
  -find argument.

Other changes:
--------------

* A GUI Frontend: Antidote

* New tasks: stylebook, propertyfile, depend, antlr, telnet, csc, ilasm, transform

* Added output attribute to <java>.

* Added nested prefixedfileset element to <war>

* Changed <sql> so that printing is at the task level rather than 
  the statement level.
  
* javadoc task will pass -d flag to any doclet if the destDir attribute is
  given. If the doclet does not accept the -d flag then omit the destdir
  attribute.

* <cab> can work on non-Windows platforms with the help of libcabinet. 
  See http://trill.cis.fordham.edu/~barbacha/cabinet_library/.

* <ftp> now supports passive mode.

Fixed bugs:
-----------

* <signjar> doesn't use deprectated methods anymore.

* javadoc's failonerror attribute works again

* Changed <sql> task so that printing result sets works on Oracle

* Changes to ddcreator and ejbc helper to respect the descriptor hierarchy
  keppgenerated in ejbc can now be turned off
  
* ejbjar now correctly ignores <ejb-ref> elements in the deployment descriptor.
  CMP files are included by parsing the weblogic deployment descriptor rather than
  relying on the naming convention used in ant 1.2
  Include super classes and super interfaces into the generated ejb jar files

* <vssget> now correctly deals with spaces in arguments

* <jar> fails early if a given manifest file doesn't exist

Changes from Ant 1.1 to Ant 1.2
===============================

Changes that could break older environments:
--------------------------------------------

* Semantics of <property> has changed again in the hope to be more
intuitive. ${} expansion now happens at runtime and <property> tags