@@ -110,6 +110,7 @@
       <exclude name="**/WLStop.java" unless="ejb.wls.present" />
       <exclude name="**/EjbJar.java" unless="jdk1.2+" />
       <exclude name="**/*DeploymentTool.java" unless="jdk1.2+" />
+      <exclude name="**/Javah.java" unless="jdk1.2+" />
       <exclude name="**/junit/*" unless="junit.present" />
       <exclude name="**/net/*.java" unless="netcomp.present" />
       <exclude name="**/AntStarTeam*.java" unless="starteam.present" />
