@@ -81,6 +81,7 @@ p4have=org.apache.tools.ant.taskdefs.optional.perforce.P4Have
 p4sync=org.apache.tools.ant.taskdefs.optional.perforce.P4Sync
 p4edit=org.apache.tools.ant.taskdefs.optional.perforce.P4Edit
 p4submit=org.apache.tools.ant.taskdefs.optional.perforce.P4Submit
+javah=org.apache.tools.ant.taskdefs.optional.Javah
 
 # deprecated ant tasks (kept for back compatibility)
 javadoc2=org.apache.tools.ant.taskdefs.Javadoc
